Historikkinnslag for endring av forespørsler